--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app= "blocTime">
   <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Time</title>
@@ -8,20 +8,25 @@
     <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/styles/history.css">
   </head>
   <body>
+
+    <ui-view> </ui-view>
 
     <div class="container center">
       <div class="time-field">25:00</div>
       <a class="task-button">Start</a>
      </div>
 
+
   </body>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-  <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+  <script src="//cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+  <script src="//cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
   <script src="/scripts/app.js"></script>
 
 </html>
