--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app= "blocTime">
+<html ng-app= "blocTime" ng-controller="taskCtrl">
   <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Time</title>
@@ -15,8 +15,8 @@
     <ui-view> </ui-view>
 
     <div class="container center">
-      <div class="time-field">25:00</div>
-      <a class="task-button">Start</a>
+      <div class="time-field">{{time | timecode}}</div>
+      <a class="task-button" ng-click="countdown()">Start</a>
      </div>
 
 
@@ -28,5 +28,8 @@
   <script src="//cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
   <script src="//cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
   <script src="/scripts/app.js"></script>
+  <script src="/scripts/filters/timecode.js"></script>
+  <script src="/scripts/directives/currentTime.js"></script>
+
 
 </html>
