--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -16,8 +16,8 @@
 
     <div class="container center">
       <div class="time-field">{{time | timecode}}</div>
-      <a class="task-button" ng-click="countdown()">Start</a>
-     </div>
+      <a class="task-button" ng-click="startReset()">{{taskName}}</a> <br>
+    </div>
 
 
   </body>
